fix: too large side free spaces on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ button {
 
 .container {
   max-width: 1200px;
-  padding: 0 1em;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
